--- a/dt-1.ipynb
+++ b/dt-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "c8644234",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "c2865013",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "[48366 rows x 9 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "bf5a57cb",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "c4a2b5af",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "[650 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "947985de",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,6 @@
        "      <th>city</th>\n",
        "      <th>country</th>\n",
        "      <th>neutral</th>\n",
-       "      <th>winner</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -456,7 +455,6 @@
        "      <td>Tirana</td>\n",
        "      <td>Albania</td>\n",
        "      <td>False</td>\n",
-       "      <td>Albania</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8629</th>\n",
@@ -469,7 +467,6 @@
        "      <td>Sydney</td>\n",
        "      <td>Australia</td>\n",
        "      <td>False</td>\n",
-       "      <td>Australia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8630</th>\n",
@@ -482,7 +479,6 @@
        "      <td>Conakry</td>\n",
        "      <td>Guinea</td>\n",
        "      <td>False</td>\n",
-       "      <td>Guinea</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8631</th>\n",
@@ -495,7 +491,6 @@
        "      <td>Bangkok</td>\n",
        "      <td>Thailand</td>\n",
        "      <td>True</td>\n",
-       "      <td>Draw</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8632</th>\n",
@@ -508,7 +503,6 @@
        "      <td>Gżira</td>\n",
        "      <td>Malta</td>\n",
        "      <td>False</td>\n",
-       "      <td>Hungary</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8633</th>\n",
@@ -521,7 +515,6 @@
        "      <td>Bucharest</td>\n",
        "      <td>Romania</td>\n",
        "      <td>False</td>\n",
-       "      <td>Romania</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8634</th>\n",
@@ -534,7 +527,6 @@
        "      <td>Bangkok</td>\n",
        "      <td>Thailand</td>\n",
        "      <td>False</td>\n",
-       "      <td>Thailand</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -550,17 +542,17 @@
        "8633  1971-11-14      Romania    Czechoslovakia           2           1   \n",
        "8634  1971-11-14     Thailand         Indonesia           1           0   \n",
        "\n",
-       "                        tournament       city    country  neutral     winner  \n",
-       "8628       UEFA Euro qualification     Tirana    Albania    False    Albania  \n",
-       "8629                      Friendly     Sydney  Australia    False  Australia  \n",
-       "8630                      Friendly    Conakry     Guinea    False     Guinea  \n",
-       "8631                    King's Cup    Bangkok   Thailand     True       Draw  \n",
-       "8632  FIFA World Cup qualification      Gżira      Malta    False    Hungary  \n",
-       "8633       UEFA Euro qualification  Bucharest    Romania    False    Romania  \n",
-       "8634                    King's Cup    Bangkok   Thailand    False   Thailand  "
+       "                        tournament       city    country  neutral  \n",
+       "8628       UEFA Euro qualification     Tirana    Albania    False  \n",
+       "8629                      Friendly     Sydney  Australia    False  \n",
+       "8630                      Friendly    Conakry     Guinea    False  \n",
+       "8631                    King's Cup    Bangkok   Thailand     True  \n",
+       "8632  FIFA World Cup qualification      Gżira      Malta    False  \n",
+       "8633       UEFA Euro qualification  Bucharest    Romania    False  \n",
+       "8634                    King's Cup    Bangkok   Thailand    False  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "6209a156",
    "metadata": {},
    "outputs": [
@@ -594,7 +586,7 @@
        "Name: count, Length: 86, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "91fa663b",
    "metadata": {},
    "outputs": [
@@ -644,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "754cca53",
    "metadata": {},
    "outputs": [
@@ -665,7 +657,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "13ea6870",
    "metadata": {},
    "outputs": [
@@ -909,7 +901,7 @@
        "[48366 rows x 10 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "a726a2cc",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1165,7 @@
        "[48366 rows x 12 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "id": "e763bb88",
    "metadata": {},
    "outputs": [
@@ -1438,7 +1430,7 @@
        "[48366 rows x 12 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "8483ab46",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1453,7 @@
        "10389"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1472,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "id": "ee8849c9",
    "metadata": {},
    "outputs": [
@@ -1725,7 +1717,7 @@
        "[48366 rows x 12 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1737,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "id": "dd33469e",
    "metadata": {},
    "outputs": [
@@ -1747,7 +1739,7 @@
        "0"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "id": "fe3f0d0b",
    "metadata": {},
    "outputs": [
@@ -1974,7 +1966,7 @@
        "[48366 rows x 10 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "id": "d2b1e05e",
    "metadata": {},
    "outputs": [],
@@ -1996,11 +1988,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b99c38bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tournament\n",
+       "Friendly                                18118\n",
+       "FIFA World Cup qualification             8419\n",
+       "UEFA Euro qualification                  2824\n",
+       "African Cup of Nations qualification     2278\n",
+       "FIFA World Cup                            964\n",
+       "                                        ...  \n",
+       "TIFOCO Tournament                           1\n",
+       "ConIFA Challenger Cup                       1\n",
+       "Benedikt Fontana Cup                        1\n",
+       "FIFA 75th Anniversary Cup                   1\n",
+       "Copa Confraternidad                         1\n",
+       "Name: count, Length: 184, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt_merge.tournament.value_counts()"
+   ]
   },
   {
    "cell_type": "code",
